# LOLBackend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1ae43da752b0_add_unique_constraint_ranked_entries.py  3980fb83271c_test_after_change_structure.py  8610296171bd_init.py  95b40df748db_add_player_correct.py  bcaa51f4fc9b_add_unique_constraint_ranked_entries.py  cdcf4894f245_add_player.py  d9a4fdfda983_add_matches_participants_ranked.py  dbcdc6d168be_date_autoupdate.py  dfcc829741f8_drop_test_table.py
app/: main.py
app/core/: config.py
app/db/: base.py  connections.py
app/models/: __init__.py  match.py  match_participant.py  player.py  ranked_entry.py  test_model.py
app/routers/: routers.py
app/schemas/: schemas.py
app/services/: collector.py
